Refactored UserController and FileController. Grouped interconnected operations.