@@ -5,41 +5,34 @@ import com.gjm.file_cloud.dao.UserDao;
 import com.gjm.file_cloud.entity.Role;
 import com.gjm.file_cloud.entity.User;
 import com.gjm.file_cloud.exceptions.RegistrationException;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
+@RequiredArgsConstructor
 public class RegistrationService {
-    private UserDao userDao;
-    private RoleDao roleDao;
-    private PasswordEncoder passwordEncoder;
+    private final UserDao userDao;
+    private final RoleDao roleDao;
+    private final PasswordEncoder passwordEncoder;
 
-    @Autowired
-    public RegistrationService(UserDao userDao, RoleDao roleDao, PasswordEncoder passwordEncoder) {
-        this.userDao = userDao;
-        this.roleDao = roleDao;
-        this.passwordEncoder = passwordEncoder;
-    }
-
-    public void registerUser(String username, String password) {
+    public void registerUser(User user) {
+        String username = user.getUsername();
         if(userDao.findByUsername(username) != null) {
             throw new RegistrationException("User with name " + username + " already exists!");
         }
 
-        Role roleUser = roleDao.findByRole("ROLE_USER");
-        if(roleUser == null) {
-            roleUser = roleDao.save(new Role("ROLE_USER"));
+        Role userRole = roleDao.findByRole("ROLE_USER");
+        if(userRole == null) {
+            userRole = roleDao.save(new Role("ROLE_USER"));
         }
 
-        User user = new User(
-                username,
-                passwordEncoder.encode(password),
-                Collections.singletonList(roleUser),
-                Collections.emptyList()
-        );
+        user.setPassword(passwordEncoder.encode(user.getPassword()));
+        user.setRoles(List.of(userRole));
+        user.setFiles(Collections.emptyList());
 
         userDao.save(user);
     }
